<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.yalantis_task1.MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_tool_bar_blue"
        app:titleTextAppearance="@style/Toolbar_title"
        android:id="@+id/toolbar"/>


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_horizontal_activity"
            android:paddingRight="@dimen/padding_horizontal_activity">

            <RelativeLayout
                style="@style/RelativeLayout_param">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/city"
                    android:text="@string/text_city"
                    android:layout_margin="@dimen/margin_view_text"
                    style="@style/Main_text_style"
                    android:gravity="start"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_text_view_offer"
                    android:id="@+id/tvOffer"
                    android:layout_margin="@dimen/margin_view_text"
                    style="@style/Offer_text_style"
                    android:background="@drawable/my_text_view"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <View
                style="@style/Divider"/>

            <RelativeLayout
                style="@style/RelativeLayout_param">

                <TextView
                    style="@style/Param_text_view_left"
                    android:text="@string/hint_valid_until"/>

                <TextView
                    style="@style/Param_text_view_right"
                    android:text="@string/text_date"/>

            </RelativeLayout>

            <View
                style="@style/Divider"/>

            <RelativeLayout
                style="@style/RelativeLayout_param">

                <TextView
                    style="@style/Param_text_view_left"
                    android:text="@string/hint_cost_of"/>

                <TextView
                    style="@style/Param_text_view_right"
                    android:text="@string/text_uah"/>

            </RelativeLayout>

            <View
                style="@style/Divider"/>

            <RelativeLayout
                style="@style/RelativeLayout_param">

                <TextView
                    style="@style/Param_text_view_left"
                    android:text="@string/hint_transport"/>

                <TextView
                    style="@style/Param_text_view_right"
                    android:text="@string/text_included"/>

            </RelativeLayout>

            <View
                style="@style/Divider"/>

            <RelativeLayout
                style="@style/RelativeLayout_param">

                <TextView
                    style="@style/Param_text_view_left"
                    android:text="@string/hint_phone"/>

                <TextView
                    style="@style/Param_text_view_right"
                    android:text="@string/text_number"
                    android:id="@+id/textView"/>

            </RelativeLayout>

            <View
                style="@style/Divider"/>

            <RelativeLayout
               style="@style/RelativeLayout_param">

                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_description"
                    android:id="@+id/tvDescription"
                    style="@style/Description_text_style"/>

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerView"
                android:scrollbars="horizontal"
                android:clickable="true">

            </android.support.v7.widget.RecyclerView>

         </LinearLayout>

    </ScrollView>

</LinearLayout>
